@@ -481,7 +481,7 @@ name, date, heure, gamestate, position, name perso, name server, versions
       Need OpenGL for minwg32
 - [ ] Should provide GNU gettext for win32
 **** TODO Change GNU headers date for 2013
-     CLOCK: [2013-02-26 mar. 19:09]
+     CLOCK: [2013-02-26 mar. 19:09]--[2013-02-26 mar. 19:33] =>  0:24
      sed command is =sed -i -e "s/2006-2012/2006-2013/g" <files>=
 - [X] Some files are in 2006-2009
 - [X] Some files are still in 2006-2011
