@@ -1,5 +1,6 @@
 2013-02-19 Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/tests/tapi/: change GNU headers date for 2013 in all files.
 	* src/editor/: change GNU headers date for 2013 in all files.
 	* src/tools/netflooder/: change GNU headers date for 2013 in all files.
 	* src/tools/ftpclient/: change GNU headers date for 2013 in all files.
